- [#5416] Relax the static_info_tables version dependencies
- [#5402] Add link to bug tracker
- [#5400] Allow more than 22 pages in the flexforms
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5417] Require static_info_tables >= 6.2.0
- [#5408] Drop version-specific code and class_exists
- [#5407] Drop the old XCLASS footers

Changes:
- [#5425] Change t3lib_div into \TYPO3\CMS\Core\Utility\GeneralUtility
- [#5418] Drop the css_styled_content requirement
- [#5406] Require TYPO3 6.2 and PHP 5.5
- [#5401] Mark the extension as stable
- [#5399] Document the new FORMidable in the upgrade notes


0.10.0 (released 2015-08-22)

Features:
- [#5379] Make the Excel-specific CSV line configurable
- [#5365] Full-text search for target_groups
- [#5353] Clone feature for events in the FE editor
- [#5287] Add additional notification e-mails for new FE-entered events
- [#5339] Format times with "hour"
- [#5319] The from-to search should also find events ending during that period
- [#5286] Add a category filter to the search widget
- [#5261] Add a full-text search index
- [#5274] Make it configurable whether to link to the single view
- [#5273] Add a configuration for disabling the sorting links in the list view
- [#5233] Add a different error message if the event UID is missing in the URL
- [#5098] Switch seminars to SwiftMailer
- [#4983] Add a hook point that would allow a HTML subpart to the notification e-mail
- [#4961] Use separate FE user data labels in the notification e-mail
- [#4958] Add wrappers around the billing address fields on the confirmation page
- [#4957] Add wrappers for the FE user data on the first registration page
- [#4941] Add a CSV label for attendances.crdate
- [#4952] Add "sep" marker to the CSV
- [#4950] Add the interests to the thank-you e-mail
- [#4929] Add the fields "food" and "accommodation" to the thank-you e-mail
- [#4924] Make the sort order of the registration items on the confirmnation page changeable