@@ -11,6 +11,7 @@
  *
  * The TYPO3 project - inspiring people to share!
  */
+use TYPO3\CMS\Backend\Utility\BackendUtility;
 use TYPO3\CMS\Core\Utility\GeneralUtility;
 
 /**
@@ -797,7 +798,7 @@ class Tx_Seminars_BackEnd_AbstractEventMailFormTest extends Tx_Phpunit_TestCase 
 		$this->fixture->render();
 
 		self::assertSame(
-			'Location: ' . t3lib_BEfunc::getModuleUrl(
+			'Location: ' . BackendUtility::getModuleUrl(
 				tx_seminars_BackEnd_AbstractEventMailForm::MODULE_NAME,
 				array('id' => tx_oelib_PageFinder::getInstance()->getPageUid()), FALSE, TRUE
 			),
