@@ -11,6 +11,7 @@
  *
  * The TYPO3 project - inspiring people to share!
  */
+use TYPO3\CMS\Backend\Utility\BackendUtility;
 
 /**
  * Test case.
@@ -77,7 +78,7 @@ class Tx_Seminars_Tests_Csv_BackEndEventAccessCheckTest extends Tx_Phpunit_TestC
 		$pageUid = 12341;
 		$this->subject->setPageUid($pageUid);
 
-		$pageRecord = t3lib_BEfunc::getRecord('pages', $pageUid);
+		$pageRecord = BackendUtility::getRecord('pages', $pageUid);
 
 		$this->backEndUser->expects(self::any())->method('check')
 			->with('tables_select', 'tx_seminars_seminars')
@@ -98,7 +99,7 @@ class Tx_Seminars_Tests_Csv_BackEndEventAccessCheckTest extends Tx_Phpunit_TestC
 		$pageUid = 12341;
 		$this->subject->setPageUid($pageUid);
 
-		$pageRecord = t3lib_BEfunc::getRecord('pages', $pageUid);
+		$pageRecord = BackendUtility::getRecord('pages', $pageUid);
 
 		$this->backEndUser->expects(self::any())->method('check')
 			->with('tables_select', 'tx_seminars_seminars')
@@ -119,7 +120,7 @@ class Tx_Seminars_Tests_Csv_BackEndEventAccessCheckTest extends Tx_Phpunit_TestC
 		$pageUid = 12341;
 		$this->subject->setPageUid($pageUid);
 
-		$pageRecord = t3lib_BEfunc::getRecord('pages', $pageUid);
+		$pageRecord = BackendUtility::getRecord('pages', $pageUid);
 
 		$this->backEndUser->expects(self::any())->method('check')
 			->with('tables_select', 'tx_seminars_seminars')
@@ -140,7 +141,7 @@ class Tx_Seminars_Tests_Csv_BackEndEventAccessCheckTest extends Tx_Phpunit_TestC
 		$pageUid = 12341;
 		$this->subject->setPageUid($pageUid);
 
-		$pageRecord = t3lib_BEfunc::getRecord('pages', $pageUid);
+		$pageRecord = BackendUtility::getRecord('pages', $pageUid);
 
 		$this->backEndUser->expects(self::any())->method('check')
 			->with('tables_select', 'tx_seminars_seminars')
